# breadrx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: README.md  scratch.py
src/data/: data_in.py  example.py  helper_functions.py  image_parser.py  image_sources.py  label_generator.py  main.py  openai_labels.py  parse.py  reddit.py
src/data/huggingface/: README.md  dataset_script.py  upload.ipynb
src/data/parsers/: helper_functions.py  image_parser.py  imgur_parser.py  reddit_parser.py  torrent_parser.py
src/ml/: architecture.py  breadrx-cnn.pth  cli.py  model.ipynb
website/: package-lock.json
website/public/: script.js
website/src/: App.js  Header.js  ImageUploader.css  ImageUploader.js
