[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["Cameron Russell"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
torchcam = "^0.4.0"
pandas = "^2.2.2"
datasets = "^2.20.0"
torchinfo = "^1.8.0"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"
alive-progress = "^3.1.5"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
openai = "^1.38.0"
beautifulsoup4 = "^4.12.3"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.2-cp39-none-macosx_10_9_x86_64.whl#sha256=f13762818dc280feca7e30f60995a17ba8d1d1ab33fefb6d07fd2c8ff1571eaa" }
torchvision = "^0.17.0"

[tool.poetry.scripts]
breadrx = "src.ml.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
